# Bank-Management-System

./: README.md
basicCpp/: CMakeLists.txt  clients.txt  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsCurrenciesListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrency.h  clsFindUserScreen.h  clsInputValidate.h  clsListClientscreen.h  clsListUsersScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsPeriod.h  clsPerson.h  clsScreen.h  clsString.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogsScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUpdateRate.h  clsUpdateUserScreen.h  clsUser.h  clsUtil.h  clsWithdrawScreen.h  currencies.txt  global.h  interFaceCommunication.h  (+7 more)
