cmake_minimum_required(VERSION 3.24)
project(basicCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(basicCpp main.cpp clsDate.h clsPeriod.h clsPerson.h clsBankClient.h clsScreen.h clsListClientscreen.h clsDeleteClientScreen.h clsFindClientScreen.h clsTransactionsScreen.h clsDepositScreen.h clsWithdrawScreen.h clsTotalBalancesScreen.h clsManageUsersScreen.h clsUser.h clsListUsersScreen.h z_shehab.cpp clsAddNewUserScreen.h clsDeleteUserScreen.h clsFindUserScreen.h clsFindUserScreen.h clsUpdateUserScreen.h clsLoginScreen.h global.h clsLoginRegisterScreen.h clsTransferScreen.h clsTransferLogsScreen.h interFaceCommunication.h clsCurrency.h clsCurrencyExchangeMainScreen.h clsCurrenciesListScreen.h clsFindCurrency.h clsUpdateRate.h clsCurrencyCalculatorScreen.h)



#                                                         ********************
#                                                         *********  *********
#                                                         ********    ********
#                                                         *******      *******
#                                                         ******        ******
#                                                         *****          *****
#                                                         ****            ****
#                                                         ***              ***
#                                                         **                **
#                                                         *                  *

#                                                         *                     *
#                                                         **                   **
#                                                         ***                 ***
#                                                         ****               ****
#                                                         *****             *****
#                                                         *******         *******
#                                                         ********       ********
#                                                         *********     *********
#                                                         **********   **********